<resources>
    <string name="app_name">Registration App</string>
    <string name="full"> Full Name: </string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name:</string>
    <string name="pass">Password:</string>
    <string name="log">Login</string>
    <string name="can">Cancel</string>
    <string name="gender">Gender:</string>
</resources>